--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1445,10 +1445,28 @@ node_types:
       cms_stageoutprotocol:
         type: string
         required: yes
+      cms_phedexnode:
+        type: string
+        required: yes
+      cms_stageoutcommand:
+        type: string
+        required: yes
+      cms_fallback_phedexnode:
+        type: string
+        required: no
+        default: 'T2_IT_myt2'
+      cms_fallback_lfn_prefix:
+        type: string
+        required: no
+        default: 'srm://t2-srm-02.lnl.infn.it:8443/srm/managerv2?SFN=xxxxxxx'
+      cms_fallback_command:
+        type: string
+        required: no
+        default: 'gfal2'
       cms_input_path:
         type: string
         required: no
-        default: 'my/path'
+        default: 'my/oneclient/path'
       cms_input_protocol:
         type: string
         required: no
@@ -1479,6 +1497,11 @@ node_types:
             cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
             cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
             cms_config_stageoutprotocol: { get_property: [ SELF, cms_stageoutprotocol ] }
+            cms_config_stageoutcommand: { get_property: [ SELF, cms_stageoutcommand
+            cms_config_phedexnode: { get_property: [ SELF, cms_phedexnode ] }
+            cms_config_fallback_phedexnode: { get_property: [ SELF,fallback_phedexnode ] }
+            cms_config_fallback_lfn_prefix: { get_property: [ SELF,fallback_lfn_prefix ] }
+            cms_config_fallback_command  : { get_property: [ SELF,fallback_command ] }
             cms_input_path: { get_property: [ SELF, cms_input_path ] }
             cms_input_protocol: { get_property: [ SELF, cms_input_protocol ] }
             cms_config_elastic_secret: { get_property: [ SELF, elasticsearch_secret ] }
