Changing roles owner

--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -2,5 +2,5 @@
 - hosts: localhost
   connection: local
   roles:
-  - role: indigo-dc.clues
+  - role: indigo_dc.clues
     indigo_orchestrator_url: "{{ orchestrator_url }}"
