--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -21,4 +21,4 @@
         dest: '/tmp'
       when: refdata_provider_type == 'cvmfs_preconfigured'
   roles:
-    - role: indigo-dc.galaxycloud-refdata
+    - role: indigo_dc.galaxycloud-refdata
