--- a/artifacts/mesos/cms_services_start.yml
+++ b/artifacts/mesos/cms_services_start.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   connection: local
   roles:
-    - role: indigo-dc.cms_config
+    - role: indigo_dc.cms_config
       marathon_username: "{{ marathon_user }}"
       marathon_password: "{{ marathon_pass }}"
 
