--- a/artifacts/galaxy/galaxy_install.yml
+++ b/artifacts/galaxy/galaxy_install.yml
@@ -8,11 +8,11 @@
         galaxy_flavor: 'galaxy-no-tools'
       when: galaxy_flavor == 'galaxy-minimal'
   roles:
-    - role: indigo-dc.galaxycloud
+    - role: indigo_dc.galaxycloud
       GALAXY_VERSION: "{{ galaxy_version }}"
       GALAXY_ADMIN_EMAIL: "{{ galaxy_admin }}"
       GALAXY_ADMIN_API_KEY: "{{ galaxy_admin_api_key }}"
-    - role: indigo-dc.nfs
+    - role: indigo_dc.nfs
       nfs_mode: 'server'
       nfs_exports: [{path: "{{export_dir}}", export: "{{ vnode_prefix }}*.localdomain(rw,async,no_root_squash,no_subtree_check,insecure)"}]
       when: galaxy_lrms != "local"
