--- a/artifacts/galaxy/galaxy_wn_configure_tooldeps.yml
+++ b/artifacts/galaxy/galaxy_wn_configure_tooldeps.yml
@@ -22,9 +22,9 @@
       authorized_key: user={{galaxy_user}} key="{{ lookup('file', '/tmp/' + galaxy_user + '_id_rsa.pub') }}"
 
   roles:
-    - role: indigo-dc.galaxycloud-tooldeps
+    - role: indigo_dc.galaxycloud-tooldeps
       type_of_node: wn
       GALAXY_VERSION: '{{ galaxy_version }}'
-    - role: indigo-dc.nfs
+    - role: indigo_dc.nfs
       nfs_mode: 'client'
       nfs_client_imports: [{ local: "{{export_dir}}", remote: "{{export_dir}}", server_host: "{{ galaxy_front_end_ip }}" }]
