--- a/artifacts/lrms/kubernetes/kube_wn_install.yml
+++ b/artifacts/lrms/kubernetes/kube_wn_install.yml
@@ -2,15 +2,15 @@
 - hosts: localhost
   connection: local
   roles:
-  - role: indigo-dc.openvpn
+  - role: indigo_dc.openvpn
     openvpn_type_of_node: 'wn'
     openvpn_frontname: 'kubeserver'
     when: wn_hybrid_cluster
-  - role: indigo-dc.nfs
+  - role: indigo_dc.nfs
     nfs_mode: 'client'
     nfs_client_imports: [{ local: "/pv", remote: "/pv", server_host: "10.8.0.1" }]
     when: wn_hybrid_cluster
-  - role: indigo-dc.nfs
+  - role: indigo_dc.nfs
     nfs_mode: 'client'
     nfs_client_imports: [{ local: "/pv", remote: "/pv", server_host: "{{ kube_front_end_ip }}" }]
     when: not wn_hybrid_cluster
