--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -10,14 +10,14 @@
   - name: "Add master mapping in hosts file"
     lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
   roles:
-  - role: indigo-dc.openvpn
+  - role: indigo_dc.openvpn
     openvpn_type_of_node: 'front'
     openvpn_frontname: 'slurmserver'
     when: fe_hybrid_cluster
-  - role: indigo-dc.nfs
+  - role: indigo_dc.nfs
     nfs_mode: 'server'
     nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
-  - role: indigo-dc.slurm
+  - role: indigo_dc.slurm
     slurm_type_of_node: 'front'
     slurm_wn_ips: '{{ wn_ips }}'
     slurm_vnode_prefix: '{{ vnode_prefix }}'
