--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -4,11 +4,11 @@
   vars:
     docker_bridge_ip: "172.0.17.1"
   roles:
-    - role: indigo-dc.consul
+    - role: indigo_dc.consul
       consul_mode: "agent"
       consul_servers: "{{ consul_server_ips }}"
       consul_advertise: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
       consul_bind_addr: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
 
-    - role: indigo-dc.marathon-lb
+    - role: indigo_dc.marathon-lb
       marathon_lb_auth_creds: "{{marathon_username}}:{{marathon_password}}"
