--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -11,31 +11,31 @@
 #      with_indexed_items: '{{ wn_ips }}'
 
   roles:
-    - role: indigo-dc.nfs
+    - role: indigo_dc.nfs
       nfs_mode: 'server'
       nfs_exports: [{path: "/data", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
       when: "enable_nfs_share == true"
 
-    - role: indigo-dc.consul
+    - role: indigo_dc.consul
       consul_mode: "server"
       consul_servers: "{{ mesos_masters_list_ips }}"
       consul_advertise: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
       consul_bind_addr: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
 
-    - role: indigo-dc.zookeeper
+    - role: indigo_dc.zookeeper
       zookeeper_host_list: "{{ mesos_masters_list_ips }}"
 
-    - role: indigo-dc.mesos
+    - role: indigo_dc.mesos
       mesos_install_mode: "master"
       zookeeper_peers: "{{ mesos_masters_list_ips }}"
       mesos_masters_list: "{{ mesos_masters_list_ips }}"
 
-    - role: indigo-dc.marathon
+    - role: indigo_dc.marathon
       zookeeper_peers: "{{ mesos_masters_list_ips }}"
       marathon_username: "{{ marathon_user }}"
       marathon_password: "{{ marathon_pass }}"
    
-    - role: indigo-dc.chronos
+    - role: indigo_dc.chronos
       zookeeper_peers: "{{ mesos_masters_list_ips }}"
       chronos_username: "{{ chronos_user }}"
       chronos_password: "{{ chronos_pass }}"
