--- a/artifacts/ophidia/ophidia_server_install.yml
+++ b/artifacts/ophidia/ophidia_server_install.yml
@@ -8,15 +8,15 @@
     - service: name=firewalld state=stopped
       ignore_errors: yes
   roles:
-    - role: indigo-dc.slurm
+    - role: indigo_dc.slurm
       slurm_type_of_node: 'front'
       slurm_wn_ips: "{{ ophidia_io_ips }}"
       slurm_vnode_prefix: '{{ vnode_prefix }}'
 
-    - role: indigo-dc.ophidia-cluster
+    - role: indigo_dc.ophidia-cluster
       node_type: 'server'
       deploy_type: 'install'
-    - role: indigo-dc.ophidia-cluster
+    - role: indigo_dc.ophidia-cluster
       node_type: 'server'
       deploy_type: 'configure'
       io_nodes_ips: "{{ ophidia_io_ips }}"
@@ -24,6 +24,6 @@
       compute_subnet: "{{ SUBNET }}"
       server_ip: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
 
-    - role: indigo-dc.nfs
+    - role: indigo_dc.nfs
       nfs_mode: 'server'
       nfs_exports: [{path: "/data", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
