--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1610,7 +1610,7 @@ node_types:
         file: indigo-dc.consul,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_lb_role:
-        file: indigo-dc.marathon-lb,deep-dev
+        file: git+https://github.com/indigo-dc/ansible-role-mesos.git,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
