--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -5,14 +5,8 @@ capability_types:
   tosca.capabilities.indigo.OperatingSystem:
     derived_from: tosca.capabilities.OperatingSystem
     properties:
-      gpu_driver:
+      gpu:
         type: boolean
-        required: no
-      cuda_support:
-        type: boolean
-        required: no
-      cuda_min_version:
-        type: string
         required: no
       image:
         type: string
@@ -50,15 +44,6 @@ capability_types:
       instance_type:
         type: string
         required: no
-      num_gpus:
-        type: integer
-        required: false
-      gpu_vendor:
-        type: string
-        required: false
-      gpu_model:
-        type: string
-        required: false  
 
   tosca.capabilities.indigo.LRMS:
     derived_from: tosca.capabilities.Container
@@ -601,7 +586,6 @@ node_types:
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_version: { get_property: [ SELF, version ] }
             get_refdata: { get_property: [ SELF, reference_data ] }
-            refdata_provider_type: { get_property: [ SELF, refdata_provider_type ] }
             refdata_cvmfs_server_url: { get_property: [ SELF, refdata_cvmfs_server_url ] }
             refdata_cvmfs_repository_name: { get_property: [ SELF, refdata_cvmfs_repository_name ] }
             refdata_cvmfs_key_file: { get_property: [ SELF, refdata_cvmfs_key_file ] }
@@ -1298,6 +1282,23 @@ node_types:
   tosca.nodes.indigo.MesosMaster:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd.Mesos
 
+  tosca.nodes.indigo.CmsOneclient:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      oneclient_pkg:
+        type: string
+        required: yes
+    artifacts:
+      oneclient_role:
+        file: indigo-dc.oneclient,dciangotdev
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/oneclient/artifacts/onedata/cms_oneclient.yml
+          inputs:
+            oneclient_pkg: { get_property: [ SELF, oneclient_pkg ] }
+
   tosca.nodes.indigo.CmsServices:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
@@ -1366,6 +1367,14 @@ node_types:
         type: string
         required: no
         default: 'https://dodas-tts.cloud.cnaf.infn.it'
+      oneclient_token: 
+        type: string
+        required: no
+        default: 'dummy'
+      oneprovider_name: 
+        type: string
+        required: no
+        default: 'dummy'
       master_ips:
         required: yes
         type: list
@@ -1398,6 +1407,8 @@ node_types:
             proxy_iam_endpoint: { get_property: [ SELF, iam_endpoint ] }
             proxy_credential_endpoint: { get_property: [ SELF, iam_credential_endpoint ] }
             proxy_audience: { get_property: [ SELF, audience ] }
+            oneclient_token: { get_property: [ SELF, oneclient_token ] }
+            oneprovider_name: { get_property: [ SELF, oneprovider_name ] }
     requirements:
       - host:
           capability: tosca.capabilities.indigo.MesosMaster
@@ -1461,28 +1472,10 @@ node_types:
       cms_stageoutprotocol:
         type: string
         required: yes
-      cms_phedexnode:
-        type: string
-        required: yes
-      cms_stageoutcommand:
-        type: string
-        required: yes
-      cms_fallback_phedexnode:
-        type: string
-        required: no
-        default: 'T2_IT_myt2'
-      cms_fallback_lfn_prefix:
-        type: string
-        required: no
-        default: 'srm://t2-srm-02.lnl.infn.it:8443/srm/managerv2?SFN=xxxxxxx'
-      cms_fallback_command:
-        type: string
-        required: no
-        default: 'gfal2'
       cms_input_path:
         type: string
         required: no
-        default: 'my/oneclient/path'
+        default: 'my/path'
       cms_input_protocol:
         type: string
         required: no
@@ -1513,11 +1506,6 @@ node_types:
             cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
             cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
             cms_config_stageoutprotocol: { get_property: [ SELF, cms_stageoutprotocol ] }
-            cms_config_stageoutcommand: { get_property: [ SELF, cms_stageoutcommand ] }
-            cms_config_phedexnode: { get_property: [ SELF, cms_phedexnode ] }
-            cms_config_fallback_phedexnode: { get_property: [ SELF,fallback_phedexnode ] }
-            cms_config_fallback_lfn_prefix: { get_property: [ SELF,fallback_lfn_prefix ] }
-            cms_config_fallback_command  : { get_property: [ SELF,fallback_command ] }
             cms_input_path: { get_property: [ SELF, cms_input_path ] }
             cms_input_protocol: { get_property: [ SELF, cms_input_protocol ] }
             cms_config_elastic_secret: { get_property: [ SELF, elasticsearch_secret ] }
