--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1637,7 +1637,7 @@ node_types:
         default: '-1'
     artifacts:
       spark_mesos_role:
-        file: indigo-dc.spark-mesos,consul_fix
+        file: indigo-dc.spark-mesos
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
