--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -14,7 +14,12 @@
     - role: indigo-dc.consul
       consul_mode: "agent"
       consul_servers: "{{ master_ips }}"
+      consul_advertise: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
+      consul_bind_addr: '{{ IM_NODE_PRIVATE_IP if IM_NODE_PRIVATE_IP is defined else ansible_default_ipv4.address }}'
       when: (enable_consul_sd == true)
 
     - role: indigo-dc.marathon-lb
       marathon_lb_auth_creds: "{{marathon_username}}:{{marathon_password}}"
+      marathon_lb_marathon_servers: "{{ master_ips }}"
+      marathon_lb_chronos_servers: "{{ master_ips }}"
+      marathon_lb_mesos_servers: "{{ master_ips }}"
