--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1327,23 +1327,23 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git|indigo-dc.docker
+        file: indigo-dc.docker
         #file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-consul.git|indigo-dc.consul
+        file: indigo-dc.consul
         type: tosca.artifacts.AnsibleGalaxy.role
       zookeeper_agent_role:
         file: indigo-dc.zookeeper
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-mesos.git|indigo-dc.mesos
+        file: indigo-dc.mesos
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-marathon.git|indigo-dc.marathon
+        file: indigo-dc.marathon
         type: tosca.artifacts.AnsibleGalaxy.role
       chronos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-chronos.git|indigo-dc.chronos
+        file: indigo-dc.chronos
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1519,13 +1519,13 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git|indigo-dc.docker
+        file: indigo-dc.docker
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-consul.git|indigo-dc.consul
+        file: indigo-dc.consul
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-mesos.git|indigo-dc.mesos
+        file: indigo-dc.mesos
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1663,13 +1663,13 @@ node_types:
         default: true
     artifacts:
       docker_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git|indigo-dc.docker
+        file: indigo-dc.docker
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-consul.git|indigo-dc.consul
+        file: indigo-dc.consul
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_lb_role:
-        file: git+https://github.com/indigo-dc/ansible-role-marathon-lb|indigo-dc.marathon-lb
+        file: indigo-dc.marathon-lb
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
