--- a/examples/tensorflow_on_mesos_gpu.yaml
+++ b/examples/tensorflow_on_mesos_gpu.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/maricaantonacci-deep-dev/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
 
 description: TOSCA example for specifying a Mesos Cluster
 
@@ -99,7 +99,7 @@ topology_template:
           properties:
             #num_cpus: 
             #mem_size:
-            instance_type: g3.large 
+            instance_type: g4.xlarge 
         os:
           properties:
             image: ubuntu-16.04-cuda9
