Add consul fix branch to test dev

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1754,7 +1754,7 @@ node_types:
         default: '-1'
     artifacts:
       spark_mesos_role:
-        file: indigo-dc.spark-mesos
+        file: indigo-dc.spark-mesos,consul_fix
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
